[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]
[ext_resource path="res://arts/bg image.jpeg" type="Texture" id=2]
[ext_resource path="res://Fonts/real-delight/Real Delight.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://arts/Settings.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 41
outline_size = 2
outline_color = Color( 0.196078, 0.0352941, 0.0352941, 1 )
font_data = ExtResource( 3 )

[node name="starting_scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -304.0
margin_top = -56.0
margin_right = 304.0
margin_bottom = 173.0
size_flags_horizontal = 0
size_flags_vertical = 4
custom_constants/separation = 50

[node name="start_button" type="Button" parent="VBoxContainer"]
margin_left = 274.0
margin_right = 334.0
margin_bottom = 43.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/hseparation = 7
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_lock_": true
}

[node name="quit_button" type="Button" parent="VBoxContainer"]
margin_left = 275.0
margin_top = 93.0
margin_right = 332.0
margin_bottom = 136.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/hseparation = 7
custom_fonts/font = SubResource( 1 )
text = "Quit"
__meta__ = {
"_edit_lock_": true
}

[node name="space_station_button" type="Button" parent="VBoxContainer"]
margin_left = 224.0
margin_top = 186.0
margin_right = 384.0
margin_bottom = 229.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/hseparation = 7
custom_fonts/font = SubResource( 1 )
text = "Space Station"

[node name="settings_button" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -72.0
margin_right = 73.0
margin_bottom = -8.0
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -288.0
margin_right = 177.0
margin_bottom = -167.0
custom_fonts/font = SubResource( 2 )
text = "This is a
 Game"
align = 1
valign = 1
uppercase = true

[connection signal="pressed" from="VBoxContainer/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/space_station_button" to="." method="_on_space_station_button_pressed"]
